--- a/Convert/grafana.properties
+++ b/Convert/grafana.properties
@@ -1,11 +1,11 @@
 convert.converter=com.wavefront.labs.convert.converter.grafana.GrafanaConverter
-convert.writer=com.wavefront.labs.convert.writer.WavefrontPublisher
-convert.expressionBuilder=com.wavefront.labs.convert.DefaultExpressionBuilder
+convert.writer=com.wavefront.labs.convert.writer.FolderWriter
+convert.expressionBuilder=com.wavefront.labs.convert.SimpleExpressionBuilder
 convert.name.processor.file=name-processor.yaml
 
 convert.writer.tags=wf-converted
 convert.writer.publish.url=https://try.wavefront.com
 convert.writer.publish.token=
 convert.writer.publish.user.sendEmail=false
-convert.writer.folder=
+convert.writer.folder=test_converted/grafana
 
