cleaned up properties

--- a/Convert/grapher.properties
+++ b/Convert/grapher.properties
@@ -2,7 +2,7 @@ grapher.definitions.metrics=test_resources/grapher/metrics.txt
 grapher.definitions.charts=test_resources/grapher/lazlo_charts.json
 grapher.filter.colo=${host}${colo}
 grapher.dashboard.row.charts=3
-grapher.alert.notifications=pierre@pierretessier.com
+grapher.alert.notifications=test@test.com
 
 #specified in time window or duration format (default is 60s)
 rrd.rpn.prev.step=60s
