--- a/Convert/datadog.properties
+++ b/Convert/datadog.properties
@@ -4,9 +4,9 @@
 datadog.underscoreReplace=.
 datadog.dropTags=role,stackname,stack
 
-convert.converter=com.wavefront.labs.convert.converter.datadog.DatadogConverter
-convert.writer=com.wavefront.labs.convert.writer.FolderWriter
+convert.converter=com.wavefront.labs.convert.converter.datadog.DatadogConverter2
 convert.expressionBuilder=com.wavefront.labs.convert.converter.datadog.DatadogExpressionBuilder
+convert.writer=com.wavefront.labs.convert.writer.FolderWriter
 convert.name.processor.file=datadog-name-processor.yaml
 
 convert.writer.tags=wf-converted
