--- a/Convert/datadog.properties
+++ b/Convert/datadog.properties
@@ -1,6 +1,7 @@
-#datadog.api.key=<DD_API_KEY>
-#datadog.application.key=<DD_APPLICATION_KEY>
-#datadog.timeboard.titleMatch=^.*(Metrics|ptessier).*$
+datadog.api.key=<DD_API_KEY>
+datadog.application.key=<DD_APPLICATION_KEY>
+datadog.timeboard.titleMatch=^.*(Metrics|ptessier).*$
+datadog.alert.titleMatch=^.*$
 datadog.underscoreReplace=.
 datadog.dropTags=role,stackname,stack
 
@@ -11,7 +12,7 @@ convert.name.processor.file=datadog-name-processor.yaml
 
 convert.writer.tags=wf-converted
 
-#convert.writer.publish.url=https://try.wavefront.com
-#convert.writer.publish.token=
+convert.writer.publish.url=https://try.wavefront.com
+convert.writer.publish.token=
 #convert.writer.publish.user.sendEmail=false
 convert.writer.folder=test_converted/datadog/
