--- a/Convert/datadog.properties
+++ b/Convert/datadog.properties
@@ -1,6 +1,8 @@
 datadog.api.key=<DD_API_KEY>
 datadog.application.key=<DD_APPLICATION_KEY>
-datadog.timeboard.titleMatch=^.*(Metrics|ptessier).*$
+datadog.timeboard.enabled=true
+datadog.timeboard.titleMatch=^.*Metrics.*$
+datadog.alert.enabled=true
 datadog.alert.titleMatch=^.*$
 datadog.underscoreReplace=.
 datadog.dropTags=role,stackname,stack
