--- a/Convert/grafana.properties
+++ b/Convert/grafana.properties
@@ -1,7 +1,7 @@
 convert.converter=com.wavefront.labs.convert.converter.grafana.GrafanaConverter
 convert.expressionBuilder=com.wavefront.labs.convert.SimpleExpressionBuilder
 convert.writer=com.wavefront.labs.convert.writer.WavefrontPublisher
-convert.name.processor.file=name-processor.yaml
+convert.name.processor.file=sample-name-processor.yaml
 
 convert.writer.tags=wf-converted
 convert.writer.publish.url=https://longboard.wavefront.com
