--- a/Convert/grapher.properties
+++ b/Convert/grapher.properties
@@ -11,7 +11,7 @@ rrd.rpn.prev.step=60s
 convert.converter=com.wavefront.labs.convert.converter.grapher.GrapherConverter
 convert.writer=com.wavefront.labs.convert.writer.WavefrontPublisher
 convert.expressionBuilder=com.wavefront.labs.convert.converter.grapher.GrapherExpressionBuilder
-convert.name.processor.file=name-processor.yaml
+convert.name.processor.file=sample-name-processor.yaml
 
 convert.writer.tags=wf-converted
 convert.writer.publish.url=https://try.wavefront.com
