--- a/Convert/build.gradle
+++ b/Convert/build.gradle
@@ -1,9 +1,16 @@
+version = '1.0-SNAPSHOT'
 
-plugins {
-    id 'java'
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.1.0'
+    }
 }
 
-version = "1.0-SNAPSHOT"
+apply plugin: 'java'
+apply plugin: 'org.junit.platform.gradle.plugin'
 
 sourceSets {
     main {
@@ -16,7 +23,7 @@ sourceSets {
     }
     test {
         java {
-            srcDir 'test'
+            srcDir 'src/test/java'
         }
         resources {
             srcDir 'test_resources'
@@ -34,7 +41,8 @@ dependencies
     compile 'com.squareup.okhttp:okhttp:2.7.5'
     compile 'com.google.code.gson:gson:2.6.2'
     compile project(':wavefront-java-sdk')
-    compile 'junit:junit:4.12'
+    testCompile  'org.junit.jupiter:junit-jupiter-api:5.1.0'
+    testCompile  'org.junit.jupiter:junit-jupiter-engine:5.1.0'
 }
 
 repositories
